...
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/margin_medium"
                android:layout_margin="@dimen/margin_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBookCover"
                    android:scaleType="centerCrop"
                    android:src="@drawable/empty_book_icon"
                    android:layout_width="80dp"
                    android:layout_height="125dp"/>
            </com.google.android.material.card.MaterialCardView>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_toEndOf="@id/mcvBookCover"
                    android:id="@+id/tvBookTitle"
                    android:paddingEnd="@dimen/margin_medium"
                    android:paddingTop="@dimen/margin_medium"
                    android:paddingStart="@dimen/margin_medium"
                    android:paddingBottom="@dimen/margin_small"
                    android:text="@string/lbl_the_art_of_learning"
                    android:textColor="@color/black"
...
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_toEndOf="@id/mcvBookCover"
                    android:layout_below="@id/tvBookTitle"
                    android:id="@+id/tvAuthor"
                    android:paddingLeft="@dimen/margin_medium"
                    android:paddingRight="@dimen/margin_medium"
                    android:text="@string/lbl_josh_waitzkin_ebook"
                    android:textColor="@color/whiteDark8"
                    android:textSize="@dimen/text_regular"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_toEndOf="@id/mcvBookCover"
                    android:layout_below="@id/tvAuthor"
                    android:id="@+id/tvBookTypeAndPages"
                    android:paddingBottom="@dimen/margin_medium"
                    android:paddingLeft="@dimen/margin_medium"
                    android:paddingRight="@dimen/margin_medium"
                    android:text="@string/lbl_ebook_187pages"
                    android:textColor="@color/whiteDark8"
                    android:textSize="@dimen/text_regular"
...
            android:layout_margin="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton

                android:id="@+id/mBtnFreeSample"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/lbl_free_sample"
                android:textAllCaps="false"
                android:textColor="@color/btn_color"
                app:backgroundTint="@color/white"
                app:strokeColor="@color/whiteDark1"
                app:strokeWidth="1dp"
                android:layout_marginStart="@dimen/margin_medium"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mBtnAddToWishlist"
                app:iconGravity="textStart"
                app:icon="@drawable/ic_bookmark_white_64"
                android:layout_toEndOf="@id/mBtnFreeSample"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/lbl_add_to_wishlist"
...
        <RelativeLayout
            android:padding="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:textStyle="bold"
                android:id="@+id/lblAboutThisEbook"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/lbl_about_this_ebook"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
...
                android:layout_alignParentEnd="true"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAboutBook"
                android:textStyle="bold"
              android:layout_below="@id/lblAboutThisEbook"
                android:layout_margin="@dimen/margin_medium"
                android:text="The New York Times-bestselling author's Whitbread Prize-winning debut- \' Winterson has mastered both comedy and tragedy in this rich little novel \' (The Washington Post Book World)."
                android:textColor="@color/whiteDark8"
                android:textSize="@dimen/text_small"
...

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlRatingAndReview"
                android:padding="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblRatingsAndReviews"
                    android:layout_margin="@dimen/margin_medium"
...
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRatingReviewList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                tools:itemCount="4"
                tools:listitem="@layout/view_holder_rating_review_list"/>

...
        <!--Published-->
        <RelativeLayout
            android:padding="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblPublish"
                android:layout_margin="@dimen/margin_medium"
                android:text="Published"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_2x"
                android:layout_width="wrap_content"
...
